--- a/client/messages.html
+++ b/client/messages.html
@@ -22,7 +22,8 @@
       display: grid;
       grid-template-columns: 320px 1fr;
       height: calc(100vh - 90px);
-      background: var(--bg);
+      background: white;
+      gap: 0;
     }
 
     /* Sidebar */
@@ -145,20 +146,21 @@
     .chat-area {
       display: flex;
       flex-direction: column;
-      background: white;
+      background: #f5f5f5;
       height: 100%;
       overflow: hidden;
     }
 
     .chat-header {
-      padding: 16px;
-      border-bottom: 2px solid #e5e7eb;
+      padding: 16px 20px;
+      border-bottom: 1px solid #e0e0e0;
       display: flex;
       justify-content: space-between;
       align-items: center;
       background: white;
       flex-shrink: 0;
       z-index: 10;
+      min-height: 60px;
     }
 
     .chat-header-info {
@@ -206,11 +208,12 @@
     .messages-content {
       flex: 1;
       overflow-y: auto;
-      padding: 16px;
+      padding: 20px 16px;
       display: flex;
       flex-direction: column;
-      gap: 12px;
+      gap: 8px;
       min-height: 0;
+      background: #f5f5f5;
     }
 
     .message-group {
@@ -233,19 +236,21 @@
     }
 
     .message-bubble {
-      max-width: 60%;
-      padding: 10px 14px;
-      border-radius: 14px;
+      max-width: 55%;
+      padding: 12px 16px;
+      border-radius: 16px;
       word-wrap: break-word;
+      line-height: 1.4;
+      font-size: 15px;
     }
 
     .message-group.received .message-bubble {
-      background: #e5e7eb;
-      color: var(--text-dark);
+      background: #e4e6eb;
+      color: #000;
     }
 
     .message-group.sent .message-bubble {
-      background: var(--emerald);
+      background: #0084ff;
       color: white;
     }
 
@@ -272,12 +277,13 @@
     /* Input Area */
     .chat-input-area {
       padding: 16px;
-      border-top: 2px solid #e5e7eb;
+      border-top: 1px solid #e0e0e0;
       background: white;
       display: flex;
       gap: 8px;
       align-items: flex-end;
       flex-shrink: 0;
+      min-height: 60px;
     }
 
     .chat-input-actions {
@@ -289,20 +295,20 @@
       width: 36px;
       height: 36px;
       border: none;
-      background: #f3f4f6;
-      color: var(--emerald);
+      background: #f0f0f0;
+      color: #0084ff;
       border-radius: 50%;
       cursor: pointer;
       display: flex;
       align-items: center;
       justify-content: center;
       font-size: 16px;
-      transition: all 0.2s;
+      transition: background 0.2s;
+      flex-shrink: 0;
     }
 
     .input-action-btn:hover {
-      background: var(--emerald);
-      color: white;
+      background: #e4e6eb;
     }
 
     .chat-input-field {
@@ -310,8 +316,8 @@
       display: flex;
       align-items: center;
       gap: 8px;
-      background: #f3f4f6;
-      border-radius: 20px;
+      background: #f0f0f0;
+      border-radius: 18px;
       padding: 8px 12px;
     }
 
@@ -320,15 +326,15 @@
       background: none;
       border: none;
       outline: none;
-      font-size: 14px;
-      font-family: inherit;
+      font-size: 15px;
+      font-family: inherit;  
     }
 
     .send-btn {
       width: 36px;
       height: 36px;
       border: none;
-      background: var(--emerald);
+      background: #0084ff;
       color: white;
       border-radius: 50%;
       cursor: pointer;
@@ -336,11 +342,12 @@
       align-items: center;
       justify-content: center;
       font-size: 16px;
-      transition: all 0.2s;
+      transition: background 0.2s;
+      flex-shrink: 0;
     }
 
     .send-btn:hover {
-      background: var(--emerald-dark);
+      background: #0073e6;
     }
 
     @media (max-width: 768px) {
