fix: restructure messages layout to be full-width and vertical
- Change messages container from grid (horizontal sidebar + chat) to flex column
- Hide sidebar completely to make messages full-width
- Stack header (name/icons), messages area, and input box vertically
- Ensure chat-area takes full available height (flex: 1)
- Make empty state center properly with full height
- Fix input area visibility by ensuring proper flex layout
- Add !important display: flex to chatContent for consistent rendering

--- a/client/messages.html
+++ b/client/messages.html
@@ -19,20 +19,15 @@
     }
 
     .messages-container {
-      display: grid;
-      grid-template-columns: 320px 1fr;
-      height: calc(100vh - 90px);
-      background: white;
-      gap: 0;
-    }
-
-    /* Sidebar */
-    .messages-sidebar {
-      background: var(--card);
-      border-right: 1px solid #e5e7eb;
       display: flex;
       flex-direction: column;
-      overflow: hidden;
+      height: calc(100vh - 90px);
+      background: white;
+    }
+
+    /* Hide sidebar on messages-only view */
+    .messages-sidebar {
+      display: none;
     }
 
     .sidebar-header {
@@ -149,6 +144,7 @@
       background: #f5f5f5;
       height: 100%;
       overflow: hidden;
+      flex: 1;
     }
 
     .chat-header {
@@ -265,6 +261,19 @@
       text-align: center;
       padding: 60px 20px;
       color: var(--text-muted);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+    }
+
+    #emptyChatState {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      height: 100%;
+      width: 100%;
     }
 
     .empty-chat i {
@@ -350,27 +359,11 @@
       background: #0073e6;
     }
 
-    @media (max-width: 768px) {
-      .messages-container {
-        grid-template-columns: 1fr;
-      }
-
-      .messages-sidebar {
-        position: absolute;
-        left: -320px;
-        height: 100%;
-        width: 320px;
-        z-index: 1000;
-        transition: left 0.3s;
-      }
-
-      .messages-sidebar.show {
-        left: 0;
-      }
-
-      .message-bubble {
-        max-width: 85%;
-      }
+    #chatContent {
+      display: flex !important;
+      flex-direction: column;
+      height: 100%;
+      flex: 1;
     }
   </style>
 </head>
@@ -400,7 +393,7 @@
 
     <!-- Chat Area -->
     <div class="chat-area">
-      <div id="emptyChatState" style="display: none;">
+      <div id="emptyChatState">
         <div class="empty-chat">
           <i class="fa-solid fa-comments"></i>
           <h3>Select a conversation</h3>
@@ -408,7 +401,7 @@
         </div>
       </div>
 
-      <div id="chatContent" style="display: none;">
+      <div id="chatContent" style="display: none; flex: 1;">
         <!-- Chat Header -->
         <div class="chat-header">
           <div class="chat-header-info">
