Sync local changes

--- a/Store/dashboard.html
+++ b/Store/dashboard.html
@@ -42,7 +42,7 @@
                 <div class="bg-blue-600 text-white p-2 rounded-lg">
                     <i data-lucide="layout-grid" class="w-5 h-5"></i>
                 </div>
-                <span class="text-xl font-bold tracking-tight text-slate-800">ProStore</span>
+                <span class="text-xl font-bold tracking-tight text-slate-800">Pa-Buy Bes!</span>
             </div>
         </div>
 
