--- a/admin/runner.html
+++ b/admin/runner.html
@@ -7,8 +7,27 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <style>
+        #map { height: 400px; border-radius: 2rem; z-index: 0; }
+        [x-cloak] { display: none !important; }
+    </style>
 </head>
 <body class="bg-[#f8fafc] font-sans" x-data="runnerStats()">
+
+    <div x-show="showProof" x-cloak class="fixed inset-0 z-50 flex items-center justify-center bg-black/60 backdrop-blur-sm p-4">
+        <div @click.away="showProof = false" class="bg-white rounded-[2.5rem] max-w-lg w-full overflow-hidden shadow-2xl">
+            <div class="p-6 border-b flex justify-between items-center bg-indigo-50">
+                <h3 class="font-black text-indigo-900 uppercase tracking-tight">Delivery Proof: <span x-text="selectedLog.id"></span></h3>
+                <button @click="showProof = false" class="text-gray-400 hover:text-gray-600"><i class="fas fa-times"></i></button>
+            </div>
+            <div class="p-8 text-center">
+                <img :src="selectedLog.proofPhoto" class="w-full h-64 object-cover rounded-3xl mb-4 border-4 border-gray-100 shadow-inner" alt="Delivery Proof">
+                <p class="text-sm font-bold text-gray-500">Delivered to: <span class="text-indigo-600" x-text="selectedLog.location"></span></p>
+            </div>
+        </div>
+    </div>
 
     <div class="flex h-screen overflow-hidden">
         <aside class="w-64 bg-indigo-950 text-white flex-shrink-0 flex flex-col shadow-xl">
@@ -17,7 +36,7 @@
             </div>
             <nav class="mt-6 px-4 space-y-2 flex-1">
                 <a href="main.html" class="block p-3 hover:bg-indigo-900 rounded-lg transition text-indigo-200"><i class="fas fa-th-large mr-2"></i> Dashboard</a>
-                <a href="runners.html" class="w-full flex items-center gap-3 p-3 rounded-xl bg-indigo-800 text-white font-bold shadow-lg">
+                <a href="#" class="w-full flex items-center gap-3 p-3 rounded-xl bg-indigo-800 text-white font-bold shadow-lg">
                     <i class="fas fa-motorcycle"></i> Runners
                 </a>
                 <a href="stores.html" class="block p-3 hover:bg-indigo-900 rounded-lg transition text-indigo-200"><i class="fas fa-store mr-2"></i> Stores</a>
@@ -26,25 +45,34 @@
         </aside>
 
         <main class="flex-1 flex flex-col overflow-y-auto">
-            
             <header class="bg-white border-b px-8 py-6 sticky top-0 z-10 flex justify-between items-center">
                 <div>
                     <h2 class="text-2xl font-black text-gray-800 uppercase tracking-tight">Runner Monitoring</h2>
-                    <p class="text-[10px] font-bold text-gray-400 uppercase tracking-widest">Performance & Logistics Oversight</p>
+                    <p class="text-[10px] font-bold text-gray-400 uppercase tracking-widest">Live Tracking & Verification</p>
                 </div>
                 <div class="flex gap-4">
-                    <div class="bg-yellow-50 px-5 py-2 rounded-2xl border border-yellow-100 flex flex-col items-center">
-                        <p class="text-[10px] font-black text-yellow-600 uppercase">Active Now</p>
-                        <p class="text-xl font-black text-indigo-950" x-text="runners.length"></p>
+                    <div class="bg-green-50 px-5 py-2 rounded-2xl border border-green-100 flex flex-col items-center">
+                        <p class="text-[10px] font-black text-green-600 uppercase">GPS Signal</p>
+                        <p class="text-xs font-black text-indigo-950">Active</p>
                     </div>
                 </div>
             </header>
 
             <div class="p-8 space-y-8">
                 
+                <div class="bg-white rounded-[2.5rem] p-6 shadow-sm border border-gray-100">
+                    <div class="flex items-center justify-between mb-6 px-4">
+                        <h4 class="font-black text-xs text-gray-500 uppercase tracking-widest flex items-center gap-2">
+                            <i class="fas fa-satellite-dish text-indigo-500"></i> Live Campus GPS Tracker
+                        </h4>
+                        <span class="text-[10px] bg-red-100 text-red-600 px-3 py-1 rounded-full animate-pulse font-bold uppercase">Live Map</span>
+                    </div>
+                    <div id="map"></div>
+                </div>
+
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                     <template x-for="runner in runners" :key="runner.name">
-                        <div class="bg-white rounded-[2.5rem] p-6 shadow-sm border border-gray-100 hover:shadow-md transition duration-300">
+                        <div class="bg-white rounded-[2.5rem] p-6 shadow-sm border border-gray-100">
                             <div class="flex items-center gap-4 mb-6">
                                 <div class="h-14 w-14 bg-indigo-100 rounded-2xl flex items-center justify-center text-indigo-600">
                                     <i class="fas fa-user-circle text-3xl"></i>
@@ -57,19 +85,14 @@
                                     </div>
                                 </div>
                             </div>
-
                             <div class="grid grid-cols-2 gap-3">
-                                <div class="bg-gray-50 p-3 rounded-2xl">
-                                    <p class="text-[8px] font-black text-gray-400 uppercase">Delivered</p>
+                                <div class="bg-gray-50 p-3 rounded-2xl text-center">
+                                    <p class="text-[8px] font-black text-gray-400 uppercase">Deliveries</p>
                                     <p class="text-sm font-black text-indigo-950" x-text="runner.delivered"></p>
                                 </div>
-                                <div class="bg-gray-50 p-3 rounded-2xl">
-                                    <p class="text-[8px] font-black text-gray-400 uppercase">Pending</p>
-                                    <p class="text-sm font-black text-yellow-600" x-text="runner.pending"></p>
-                                </div>
-                                <div class="bg-gray-50 p-3 rounded-2xl col-span-2 flex justify-between items-center">
-                                    <p class="text-[8px] font-black text-gray-400 uppercase">Earnings</p>
-                                    <p class="text-sm font-black text-green-600" x-text="'₱' + runner.earnings"></p>
+                                <div class="bg-gray-50 p-3 rounded-2xl text-center">
+                                    <p class="text-[8px] font-black text-gray-400 uppercase">Status</p>
+                                    <span :class="runner.isOnline ? 'text-green-500' : 'text-gray-400'" class="text-xs font-black uppercase" x-text="runner.isOnline ? 'Online' : 'Offline'"></span>
                                 </div>
                             </div>
                         </div>
@@ -77,8 +100,8 @@
                 </div>
 
                 <div class="bg-white rounded-[2.5rem] shadow-sm border border-gray-100 overflow-hidden">
-                    <div class="p-6 border-b flex justify-between items-center">
-                        <h4 class="font-black text-xs text-gray-500 uppercase tracking-widest">Detailed Delivery Logs</h4>
+                    <div class="p-6 border-b">
+                        <h4 class="font-black text-xs text-gray-500 uppercase tracking-widest">Delivery Verification Log</h4>
                     </div>
                     <table class="w-full text-left">
                         <thead>
@@ -87,7 +110,7 @@
                                 <th class="p-5">Runner</th>
                                 <th class="p-5">Location</th>
                                 <th class="p-5">Status</th>
-                                <th class="p-5">Payment</th>
+                                <th class="p-5">Verification</th>
                             </tr>
                         </thead>
                         <tbody class="divide-y divide-gray-50 text-sm">
@@ -95,19 +118,16 @@
                                 <tr class="hover:bg-indigo-50/10 transition">
                                     <td class="p-5 font-black text-indigo-600" x-text="log.id"></td>
                                     <td class="p-5 font-bold text-gray-700" x-text="log.runner"></td>
-                                    <td class="p-5">
-                                        <div class="flex items-center gap-2 text-gray-500">
-                                            <i class="fas fa-location-dot text-indigo-400"></i>
-                                            <span class="text-xs font-bold" x-text="log.location"></span>
-                                        </div>
-                                    </td>
+                                    <td class="p-5 text-gray-500 font-bold text-xs" x-text="log.location"></td>
                                     <td class="p-5">
                                         <span :class="log.status === 'Delivered' ? 'bg-green-100 text-green-700' : 'bg-yellow-100 text-yellow-700'"
-                                              class="text-[10px] font-black px-3 py-1 rounded-full uppercase tracking-tighter" x-text="log.status">
+                                              class="text-[10px] font-black px-3 py-1 rounded-full uppercase" x-text="log.status">
                                         </span>
                                     </td>
                                     <td class="p-5">
-                                        <span class="text-[10px] font-bold text-gray-400 border border-gray-200 px-2 py-1 rounded-lg" x-text="log.payment"></span>
+                                        <button @click="openProof(log)" class="bg-indigo-50 text-indigo-600 text-[10px] font-black px-4 py-2 rounded-xl hover:bg-indigo-100 transition">
+                                            VIEW PHOTO
+                                        </button>
                                     </td>
                                 </tr>
                             </template>
@@ -121,16 +141,35 @@
     <script>
         function runnerStats() {
             return {
+                showProof: false,
+                selectedLog: {},
                 runners: [
-                    { name: 'James Wilson', rating: '4.8', delivered: 412, pending: 3, earnings: '12,400.50' },
-                    { name: 'Aisha Khan', rating: '4.0', delivered: 285, pending: 0, earnings: '8,900.20' },
-                    { name: 'Mark Ramos', rating: '4.5', delivered: 120, pending: 1, earnings: '4,200.00' }
+                    { name: 'James Wilson', rating: '4.8', delivered: 412, isOnline: true, lat: 14.5995, lng: 120.9842 },
+                    { name: 'Aisha Khan', rating: '4.0', delivered: 285, isOnline: true, lat: 14.6010, lng: 120.9810 },
+                    { name: 'Mark Ramos', rating: '4.5', delivered: 120, isOnline: false, lat: 14.5950, lng: 120.9880 }
                 ],
                 logs: [
-                    { id: '#ORD-9901', runner: 'James Wilson', location: 'Library South Wing', status: 'Delivered', payment: 'Paid (Wallet)' },
-                    { id: '#ORD-9905', runner: 'James Wilson', location: 'Science Lab B-12', status: 'In Progress', payment: 'COD (Pending)' },
-                    { id: '#ORD-9882', runner: 'Aisha Khan', location: 'Dormitory Block A', status: 'Delivered', payment: 'Paid (Online)' }
-                ]
+                    { id: '#ORD-9901', runner: 'James Wilson', location: 'Library South Wing', status: 'Delivered', proofPhoto: 'https://images.unsplash.com/photo-1531353826977-0941b4779a1c?auto=format&fit=crop&q=80&w=400' },
+                    { id: '#ORD-9905', runner: 'Aisha Khan', location: 'Science Lab B-12', status: 'Delivered', proofPhoto: 'https://images.unsplash.com/photo-1533560904424-a0c61dc306fc?auto=format&fit=crop&q=80&w=400' },
+                    { id: '#ORD-9882', runner: 'Mark Ramos', location: 'Dormitory Block A', status: 'Delivered', proofPhoto: 'https://images.unsplash.com/photo-1582733775063-9712a61d3140?auto=format&fit=crop&q=80&w=400' }
+                ],
+                init() {
+                    this.initMap();
+                },
+                initMap() {
+                    // Coordinates set to Manila as an example, you can change to your campus coordinates
+                    const map = L.map('map').setView([14.5995, 120.9842], 15);
+                    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+
+                    this.runners.forEach(runner => {
+                        const marker = L.marker([runner.lat, runner.lng]).addTo(map);
+                        marker.bindPopup(`<b>${runner.name}</b><br>${runner.isOnline ? 'Currently Active' : 'Offline'}`);
+                    });
+                },
+                openProof(log) {
+                    this.selectedLog = log;
+                    this.showProof = true;
+                }
             }
         }
     </script>
