--- a/runner/runner-dashboard.html
+++ b/runner/runner-dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pa-Buy Bes! | Runner Dashboard</title>
-    <link rel="stylesheet" href="runner.css">
+    <link rel="stylesheet" href="runner-style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
